# weber_fechner

./: Cargo.toml  README.md  index.html  participant_1.csv  participant_2.csv  weber_fechner.d.ts  weber_fechner.js  weber_fechner_bg.wasm.d.ts
.github/workflows/: rust.yml
src/: main.rs
src/setup/: mod.rs  setup.rs
src/state/: experiment.rs  mod.rs
src/system/: fixation.rs  instruction.rs  mod.rs  output.rs  resultscreen.rs  start.rs  update.rs
